syntax = "proto2";

package sf.solana.block_meta.v1;

message InputAccounts {
  optional string owner = 1;
  optional string funding_account = 2;
  optional string associated_token_account = 3;
  optional string wallet_address = 4;
  optional string token_mint = 5;
  optional string system_program = 6;
  optional string spl_token_program = 7;
  optional string nested_associated_token_account = 8;
  optional string owner_associated_token_account = 9;
}

message Meta {
  required string block_date = 1;
  required int64 block_time = 2;
  required string tx_id = 3;
  required string dapp = 4;
  required uint64 block_slot = 5;
  required uint32 instruction_index = 7;
  required bool is_inner_instruction = 8;
  required uint32 inner_instruction_index = 9;
  required string outer_program = 10;
  required string instruction_type = 11;
  required InputAccounts input_accounts = 12;
}

message Output {
  repeated Meta data = 1;
}